# morebinds

./: CMakeLists.txt  README.md  hyprpm.toml  main.cpp
